# openenv-support-agent

./: .gitignore  BLOG.md  Dockerfile  README.md  app.py  colab_training.ipynb  inference.py  openenv.yaml  pyproject.toml  requirements.txt  streamlit_app.py  train_online.py
artifacts/: training_metrics.json
env/: __init__.py  graders.py  llm_judge.py  models.py  support_env.py  tasks.py  ticket_generator.py
scripts/: render_submission_plots.py
server/: app.py
templates/: index.html
training_logs/: README.md  env_eval.example.json  env_eval.json  training_metrics.example.json  training_metrics.json
