[project]
name = "openenv-support-agent"
version = "0.1.0"
description = "Customer support OpenEnv environment"
authors = [
  { name = "Jatin Chaudhary" }
]

requires-python = ">=3.10"   # ✅ ADD THIS LINE

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openenv-core>=0.2.0"
]
[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "server.app:main"